tests/ui/const-generics/issues/issue-83249.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-83249.rs:19:13
   |
LL |     let _ = foo([0; 1]);
   |             ^^^ ------ type must be known at this point
   |             |
   |             cannot infer type of the type parameter `T` declared on the function `foo`
   |
   = note: cannot satisfy `_: Foo`
   = help: the trait `Foo` is implemented for `u8`
note: required by a bound in `foo`
  --> $DIR/issue-83249.rs:12:11
   |
LL | fn foo<T: Foo>(_: [u8; T::N]) -> T {
   |           ^^^ required by this bound in `foo`
help: consider specifying the generic argument
   |
LL |     let _ = foo::<T>([0; 1]);
   |                +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
